tests/error/comptime/check_dereference03.bz
// error: invalid memory access of an object of type 'int32'
// note: while evaluating expression at compile time
// note: address is a one-past-the-end pointer into this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		*(p + 1);
	});
}
